--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -2,4 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "materialize";
+
+.center {
+  text-align: center;
+}
+
+.center > div, .center > table{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.backstretch{
+  opacity: 0.65;
+}
