--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,2 +1,50 @@
-<h1>Session#new</h1>
-<p>Find me in app/views/session/new.html.erb</p>
+<main class="center">
+    <div class="section"></div>
+    <h5 class="indigo-text">Inicia sesión para continuar</h5>
+    <div class="section"></div>
+
+    <div class="container">
+      <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+
+        <form action=""></form>
+
+        <form class="col s12" method="post">
+          <div class='row'>
+            <div class='col s12'>
+            </div>
+          </div>
+
+          <div class='row'>
+            <div class='input-field col s12'>
+              <input class='validate' type='email' name='email' id='email' />
+              <label for='email'>Correo electrónico</label>
+            </div>
+          </div>
+
+          <div class='row'>
+            <div class='input-field col s12'>
+              <input class='validate' type='password' name='password' id='password' />
+              <label for='password'>Contraseña</label>
+            </div>
+            <label style='float: right;'>
+              <a class='pink-text' href='#!'><b>Olvide mi contraseña</b></a>
+            </label>
+          </div>
+
+          <br />
+          <div class="center">
+            <div class='row'>
+              <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect indigo'>Entrar</button>
+            </div>
+          </div>
+        </form>
+
+        <a href="#">Registro</a>
+
+        <div class="section"></div>
+      </div>
+    </div>
+
+  <div class="section"></div>
+  <div class="section"></div>
+</main>
