--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -6,7 +6,7 @@
     <div class="container">
       <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
-        <form action=""></form>
+        <!-- TODO: ADD FORM TO LOGIN (symbol: login) -->
 
         <form class="col s12" method="post">
           <div class='row'>
