--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -4,42 +4,39 @@
     <div class="section"></div>
 
     <div class="container">
-      <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+      <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">        
 
-        <!-- TODO: ADD FORM TO LOGIN (symbol: login) -->
-
-        <form class="col s12" method="post">
-          <div class='row'>
-            <div class='col s12'>
-            </div>
-          </div>
-
+        <%= form_for :session, html: {role: "form", class: "col s12"} do |f| %>
+          
+          <% if flash[:error] %>        
+            <span class="red-text">
+              <%= flash[:error] %>
+            </span>
+          <% end %>
+          
           <div class='row'>
             <div class='input-field col s12'>
-              <input class='validate' type='email' name='email' id='email' />
+              <%= f.email_field :email %>              
               <label for='email'>Correo electrónico</label>
             </div>
           </div>
 
           <div class='row'>
             <div class='input-field col s12'>
-              <input class='validate' type='password' name='password' id='password' />
-              <label for='password'>Contraseña</label>
+              <%= f.password_field :password %>              
+              <label for='email'>Contraseña</label>
             </div>
-            <label style='float: right;'>
-              <a class='pink-text' href='#!'><b>Olvide mi contraseña</b></a>
-            </label>
           </div>
 
-          <br />
           <div class="center">
-            <div class='row'>
-              <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect indigo'>Entrar</button>
+            <div class="row">
+              <%= f.submit "Enviar", class: "col s12 btn btn-large " %>              
             </div>
-          </div>
-        </form>
+          </div>          
 
-        <a href="#">Registro</a>
+        <% end %>
+
+        <a href="#">Registro</a>        
 
         <div class="section"></div>
       </div>
