--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -43,3 +43,9 @@
       </div>
     </div>
 </div>
+
+<script>
+  $(function(){
+      $.backstretch("<%= image_path('money.jpeg') %>");
+  });
+</script>
