--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -57,3 +57,9 @@
     </div>
   </div>
 </div>
+
+<script>
+    $(function(){
+        $.backstretch("<%= image_path('money.jpeg') %>");
+    });
+</script>
