--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,9 +20,36 @@
         <span class="card-title"><i class="material-icons">history</i> Historial</span>
         <% if @wallet.transaction_history.count == 0%>
           <h5>No hay transacciones registradas</h5>
-        <% end %>
-        <% @wallet.transaction_history.each do |transaction|%>
-          <%= transaction %>
+        <% else %>
+          <table>
+            <thead>
+            <tr>
+              <th>Fecha y Hora</th>
+              <th>Tipo de Transacción</th>
+              <th>Destino</th>
+              <th>Monto</th>
+              <th>Comisión</th>
+              <th>Total</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <% @wallet.transaction_history.each do |transaction|%>
+              <tr>
+                <td><%= transaction.created_at %></td>
+                <td><%= transaction.transaction_type.name %></td>
+                <% if !transaction.card_transaction.blank? %>
+                  <td>Tarjeta de Débito</td>
+                <% elsif !transaction.wallet_transaction.blank? %>
+                  <td>Wallet</td>
+                <% end %>
+                <td><%= number_to_currency(transaction.amount) %></td>
+                <td><%= number_to_currency(transaction.print_comissions) %></td>
+                <td><%= number_to_currency(transaction.print_final_amount) %></td>
+              </tr>
+            <% end %>
+            </tbody>
+          </table>
         <% end %>
       </div>
     </div>
