--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,57 +1,11 @@
 <div class="row">
   <div class="col12">
-    <div class="card indigo">
-      <div class="card-content white-text">
-        <span class="card-title"><i class="material-icons">account_balance_wallet</i> Mi Wallet <small class="grey-text lighten-5">Wallet ID: <%= @wallet.name %></small></span>
-        <h4>Fondos: <%= number_to_currency(@wallet.balance) %></h4>
-      </div>
-      <div class="card-action">
-        <a href="#">Fondear Wallet</a>
-        <a href="#">Transferencias</a>
-      </div>
-    </div>
+    <%= render "/wallet_info"%>
   </div>
 </div>
 
 <div class="row">
   <div class="col12">
-    <div class="card indigo lighten-5">
-      <div class="card-content">
-        <span class="card-title"><i class="material-icons">history</i> Historial</span>
-        <% if @wallet.transaction_history.count == 0%>
-          <h5>No hay transacciones registradas</h5>
-        <% else %>
-          <table>
-            <thead>
-            <tr>
-              <th>Fecha y Hora</th>
-              <th>Tipo de Transacción</th>
-              <th>Destino</th>
-              <th>Monto</th>
-              <th>Comisión</th>
-              <th>Total</th>
-            </tr>
-            </thead>
-
-            <tbody>
-            <% @wallet.transaction_history.each do |transaction|%>
-              <tr>
-                <td><%= transaction.created_at %></td>
-                <td><%= transaction.transaction_type.name %></td>
-                <% if !transaction.card_transaction.blank? %>
-                  <td>Tarjeta de Débito</td>
-                <% elsif !transaction.wallet_transaction.blank? %>
-                  <td>Wallet</td>
-                <% end %>
-                <td><%= number_to_currency(transaction.amount) %></td>
-                <td><%= number_to_currency(transaction.print_comissions) %></td>
-                <td><%= number_to_currency(transaction.print_final_amount) %></td>
-              </tr>
-            <% end %>
-            </tbody>
-          </table>
-        <% end %>
-      </div>
-    </div>
+    <%= render "/wallet_history"%>
   </div>
 </div>
