Rename card controller

--- a/app/views/_user_cards.html.erb
+++ b/app/views/_user_cards.html.erb
@@ -25,7 +25,7 @@
     </div>
   </div>
   <div class="card-action">
-    <%= link_to new_user_card_path do %>
+    <%= link_to new_card_path do %>
       Agregar Tarjeta
     <% end %>
   </div>
