--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
         <% end %>
       </li>
       <li>
-        <%= link_to user_cards_path do %>
+        <%= link_to cards_path do %>
           <i class="material-icons">credit_card</i>Administrar Tarjetas
         <% end %>
       </li>
