Added create and delete card features, added cards partial to home

--- a/app/views/_user_cards.html.erb
+++ b/app/views/_user_cards.html.erb
@@ -1,6 +1,6 @@
-<div class="card indigo">
+<div class="card light-blue darken-4">
   <div class="card-content white-text">
-    <span class="card-title"><i class="material-icons">credit_card</i> Tarjetas</span>
+    <span class="card-title"><i class="material-icons">credit_card</i> Mis Tarjetas</span>
     <div class="card-content">
       <% if @cards.count == 0 %>
         <h5>No hay tarjetas registradas</h5>
@@ -9,14 +9,25 @@
           <thead>
             <tr>
               <th>Número de tarjeta</th>
+              <th>Fecha de Expiración</th>
               <th>Tipo de tarjeta</th>
+              <th>Acciones</th>
             </tr>
           </thead>
           <tbody>
             <% @cards.each do |card| %>
               <tr>
                 <td><%= "**** **** **** **** #{card.card_name[-4..-1]}"%></td>
-                <td><%= card.card_type.name %></td>
+                <td><%= card.expiration_date %></td>
+                <td><%= card.card_type.name %></td>                
+                <td>
+                  <%= link_to edit_card_path(id: card.id), class: "btn-small yellow black-text", title: "Editar tarjeta" do %>
+                    <i class="material-icons">edit</i>
+                  <% end %>
+                  <%= link_to card_path(id: card.id), class: "btn-small red", method: :delete, data: {confirm: "Deseas eliminar la tarjeta?"}, title: "Eliminar tarjeta" do %>
+                    <i class="material-icons">delete</i>
+                  <% end %>                  
+                </td>
               </tr>
             <% end %>
           </tbody>
