--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -35,7 +35,7 @@
 
         <% end %>
 
-        <%= link_to new_customers_path do %>
+        <%= link_to new_customer_path do %>
           Registro
         <% end %>
 
