--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,2 +1,50 @@
-<h1>Cards#new</h1>
-<p>Find me in app/views/cards/new.html.erb</p>
+<div class="row">
+    <div class="col s8 offset-s2">
+        <div class="card indigo lighten-5">
+            <div class="card-content">
+                <span class="card-title"><i class="material-icons">credit_card</i> Nueva tarjeta</span>
+
+                <%= form_for @card, html: {role: "form"} do |f| %>                
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <%= f.text_field :card_name, required: true %>                            
+                            <%= f.label :card_name, "Número de tarjeta" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <%= f.text_field :expiration_date, pattern: "(0[1-9]|1[0-2])\/([0-9]{2})", required: true %>
+                            <%= f.label :expiration_date, "Fecha de Expiración (MM/AA)" %>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <%= f.select :card_type_id, required: true do %>                            
+                                <% @card_types.each do |type| %>
+                                    <%= content_tag(:option, type.name, value: type.id) %>
+                                <% end %>
+                            <% end %>
+                            <%= f.label :card_type_id, "Tipo de tarjeta" %>
+                        </div>
+                    </div>
+
+                    <div class="center">
+                        <div class="row">
+                        <%= f.submit "Guardar", class: "col s12 btn btn-large " %>              
+                        </div>
+                    </div>
+
+                <% end %>
+                
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+$(document).ready(function(){
+    $('select').formSelect();
+  });
+</script>
