--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,12 @@
 
 <div class="row">
   <div class="col12">
+    <%= render "/user_cards"%>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col12">
     <%= render "/wallet_history"%>
   </div>
 </div>
