--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,12 @@
       <%= yield %>
     </div>
 
+    <% if flash[:error] %>
+      <span class="red-text">
+        <%= flash[:error] %>
+      </span>
+    <% end %>
+
     <script>
         $(document).ready(function(){
             $(".sidenav").sidenav();
