Modified edit on cards controller, deleted show on cards controller

--- a/app/views/_wallet_info.html.erb
+++ b/app/views/_wallet_info.html.erb
@@ -5,6 +5,6 @@
   </div>
   <div class="card-action">
     <a href="#">Fondear Wallet</a>
-    <a href="#">Transferencias</a>
+    <a href="#">Transferir</a>
   </div>
 </div>
