fixed image extension

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -60,6 +60,6 @@
 
 <script>
     $(function(){
-        $.backstretch("<%= image_path('money.jpeg') %>");
+        $.backstretch("<%= image_path('money.jpg') %>");
     });
 </script>
