--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -46,6 +46,6 @@
 
 <script>
     $(function(){
-        $.backstretch("<%= image_path('money.jpeg') %>");
+        $.backstretch("<%= image_path('money.jpg') %>");
     });
 </script>
