Added responsive tables

--- a/app/views/_user_cards.html.erb
+++ b/app/views/_user_cards.html.erb
@@ -5,7 +5,7 @@
       <% if @cards.count == 0 %>
         <h5>No hay tarjetas registradas</h5>
       <% else %>
-        <table>
+        <table class="responsive-table">
           <thead>
             <tr>
               <th>Número de tarjeta</th>
