--- a/app/views/_wallet_history.html.erb
+++ b/app/views/_wallet_history.html.erb
@@ -5,7 +5,7 @@
       <h5>No hay transacciones registradas</h5>
     <% else %>
       <h5>Transacciones Realizadas</h5>
-      <table>
+      <table class="responsive-table">
         <thead>
         <tr>
           <th>Fecha y Hora</th>
