--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -4,6 +4,7 @@
 
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import "materialize";
+@import "iziToast";
 
 .center {
   text-align: center;
